--- a/layouts/blogs/single.html
+++ b/layouts/blogs/single.html
@@ -13,12 +13,12 @@
 <section class="main-section">
     <div>
         <div class='breadcrumb'>
-            <span><a href='{{ "blogs" | absURL }}'>{{ i18n "introduction4"}}</a> > </span>
+            <span><a href='{{ "blogs" | absURL }}'>{{ i18n "introduction1"}}</a> > </span>
             <span>{{ .Title }}</span>
         </div>
         <div class='main-div'>
             <div class='author'>{{ .Params.author }}</div>
-            <div class='date'>{{ i18n "introduction3" }}：{{ .Params.date }}</div>
+            <div class='date'>{{ i18n "introduction3" }}：{{ .Params.createTime }}</div>
             <h1>{{ .Title }}</h1>
             <div class='content'>
                 <div class='md-body'>
