--- a/layouts/conferences/single.html
+++ b/layouts/conferences/single.html
@@ -13,7 +13,7 @@
 <section class="main-section">
     <div>
         <div class='breadcrumb'>
-            <span><a href='{{ "blogs" | absURL }}'>{{ i18n "introduction4"}}</a> > </span>
+            <span><a href='{{ "conferences" | absLangURL }}'>{{ i18n "introduction4"}}</a> > </span>
             <span>{{ .Title }}</span>
         </div>
         <div class='main-div'>
