refine firsr version

--- a/assets/scss/case.scss
+++ b/assets/scss/case.scss
@@ -37,6 +37,7 @@
 }
 
 .section-2 {
+  position: relative;
   .cases-ul {
     display: flex;
     flex-wrap: wrap ;
@@ -45,6 +46,7 @@
     top: -60px;
     width: 1160px;
     margin: 0 auto;
+    z-index: 2;
 
     li {
       width: 373px;
@@ -84,9 +86,17 @@
       }
     }
   }
+
+  & > img {
+    position: absolute;
+    bottom: 30px;
+    right: 50%;
+    transform: translateX(-520px);
+  }
 }
 
 .section-3 {
+  position: relative;
   background-image: url('/images/case/oval-4.svg');
   background-position: center top;
   background-repeat: no-repeat;
@@ -115,17 +125,24 @@
       background-color: #ffffff;
 
       li {
-        margin-left: 60px;
+        padding: 8px 16px;
+        border-radius: 20px;
+        margin-left: 30px;
         height: 24px;
         font-size: 16px;
         line-height: 1.5;
         color: #36435c;
         cursor: pointer;
+        transition: all ease 0.2s;
+
+        &:hover {
+          box-shadow: 0 8px 16px 0 rgba(101, 193, 148, 0.2), 0 0 50px 0 rgba(101, 193, 148, 0.1);
+          background-color: #55bc8a;
+          color: #ffffff;
+        }
       }
 
       .active {
-        padding: 8px 16px;
-        border-radius: 20px;
         box-shadow: 0 8px 16px 0 rgba(101, 193, 148, 0.2), 0 0 50px 0 rgba(101, 193, 148, 0.1);
         background-color: #55bc8a;
         color: #ffffff;
@@ -133,8 +150,10 @@
     }
 
     #case-children {
+      position: relative;
+      z-index: 2;
       display: flex;
-      flex-wrap: wrap ;
+      flex-wrap: wrap;
       li {
         margin-top: 20px;
         margin-right: 21px;
@@ -152,5 +171,23 @@
         box-shadow: 0 4px 8px 0 rgba(36, 46, 66, 0.06), 0 8px 16px 0 rgba(36, 46, 66, 0.05);
       }
     }
+
+    & > p {
+      margin-top: 40px;
+      text-align: center;
+
+      a {
+        color: #00a971;
+      }
+    }
+  }
+
+
+  & > img {
+    width: 152px;
+    position: absolute;
+    bottom: -20px;
+    left: 50%;
+    transform: translateX(500px);
   }
 }
