--- a/layouts/index.html
+++ b/layouts/index.html
@@ -140,8 +140,8 @@
           </ul>
         </div>
         <div class='image'>
-          <img src="/images/home/applications.jpg" alt="">
-          <img src="/images/home/applications.jpg" alt="">
+          <img src="/images/home/applications.png" alt="">
+          <img src="/images/home/applications.png" alt="">
         </div>
       </div>
       {{ end }}
