--- a/assets/scss/open-source.scss
+++ b/assets/scss/open-source.scss
@@ -1,22 +1,44 @@
 .open-source-header {
   text-align: center;
-  margin-top: 93px;
+  height: 300px;
+  color: #ffffff;
+
+  & > img {
+    width: 100%;
+    height: 100%;
+    object-fit:cover;
+  }
+
+  & > div {
+    position: absolute;
+    top: 129px;
+    left: 0;
+    right: 0;
+    text-align: center;
+  }
+
   h1 {
-    margin-bottom: 20px;
+    height: 40px;
+    text-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
     font-size: 40px;
-    font-weight: 600;
-    line-height: 1.4;
-    text-shadow: 0 8px 16px rgba(35,45,65,.16);
-    color: #36435c;
+    font-weight: bold;
+    line-height: 1;
+    letter-spacing: -0.11px;
+    color: #ffffff;
   }
+
   p {
-    max-width: 760px;
-    margin: 0 auto 30px;
-    font-size: 14px;
-    line-height: 2.29;
-    text-shadow: 0 8px 16px rgba(35,45,65,.16);
-    color: #36435c;
+    height: 24px;
+    margin-top: 12px;
+    margin-bottom: 16px;
+    text-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: -0.04px;
+    text-align: center;
+    color: #ffffff;
   }
+
   button {
     height: 48px;
     border-radius: 30px;
@@ -44,41 +66,44 @@
       vertical-align: text-top;
     }
   }
-  ul {
-    margin-top: 77px;
-    li {
-      position: relative;
-      display: inline-block;
-      margin-bottom: 32px;
-      font-size: 16px;
-      font-weight: 600;
-      color: #36435c;
-      cursor: pointer;
-    }
-    li + li {
-      margin-left: 40px;
-    }
-    a {
-      color: rgb(48, 62, 90);
-      &:hover {
-        color: #4ca986;
-      }
-    }
-    .active {
-      color: #4ca986;
-      &::after {
-        position: absolute;
-        bottom: -32px;
-        left: 50%;
-        -webkit-transform: translateX(-50%);
-        transform: translateX(-50%);
-        content: "";
-        width: 0;
-        height: 0;
-        border: 1em solid transparent;
-        border-bottom-color: #fff;
-      }
-    }
+}
 
+.open-source-tab {
+  width: 1160px;
+  margin: 40px auto 0;
+  text-align: center;
+  li {
+    position: relative;
+    display: inline-block;
+    margin-bottom: 32px;
+    font-size: 16px;
+    font-weight: 600;
+    color: #36435c;
+    cursor: pointer;
   }
+  li + li {
+    margin-left: 40px;
+  }
+  a {
+    color: rgb(48, 62, 90);
+    &:hover {
+      color: #4ca986;
+    }
+  }
+  .active {
+    color: #4ca986;
+    &::after {
+      position: absolute;
+      bottom: -32px;
+      left: 50%;
+      -webkit-transform: translateX(-50%);
+      transform: translateX(-50%);
+      content: "";
+      width: 0;
+      height: 0;
+      border: 1em solid transparent;
+      border-bottom-color: #fff;
+    }
+  }
+
 }
