--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -15,6 +15,7 @@ section {
     position: absolute;
     top: 0;
     right: 0;
+    height: 431px;
   }
 
   & > .img2 {
@@ -93,8 +94,7 @@ section {
       width: 211px;
       color: #ffffff;
       box-shadow: 0 10px 50px 0 rgba(34, 43, 62, 0.1), 0 8px 16px 0 rgba(33, 43, 61, 0.2), 0 10px 50px 0 rgba(76, 169, 134, 0.05);
-      background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.1) 97%), linear-gradient(to bottom, #000000, #000000);
-
+      background-image: linear-gradient(to bottom,rgba(0,0,0,0),rgba(0,0,0,0.1) 97%),linear-gradient(to bottom,#242e42,#242e42);
     }
 
     .btn2 {
@@ -119,7 +119,7 @@ section {
     }
 
     .img2 {
-      top: 507px;
+      top: 490px;
       right: 454px;
     }
 
@@ -684,7 +684,6 @@ section {
 .section-6 {
   position: relative;
   box-sizing: border-box;
-  height: 1100px;
   margin-top: -300px;
   padding-top: 300px;
   background-color: #f5f8f9;
@@ -781,11 +780,57 @@ section {
       }
     }
 
+    & > .join-div {
+      display: block;
+      position: relative;
+      box-sizing: border-box;
+      margin-top: 90px;
+      height: 110px;
+      padding: 25px 266px 0 55px;
+      text-align: left;
+      border-radius: 12px;
+      background-color: #ffffff;
+      box-shadow: 0 4px 8px 0 rgba(36, 46, 66, 0.06), 0 8px 16px 0 rgba(36, 46, 66, 0.05);
+
+      &:hover {
+        background-image: linear-gradient(99deg, #4a499a 29%, #8552c3 80%);
+
+        .p1, .p2 {
+          color: #ffffff;
+        }
+      }
+
+      .p1 {
+        height: 24px;
+        font-size: 20px;
+        color: #30313b;
+      }
+
+      .p2 {
+        height: 32px;
+        margin-top: 4px;
+        opacity: 0.8;
+        font-size: 16px;
+        line-height: 2;
+        color: #919aa3;
+      }
+
+      & > img {
+        position: absolute;
+        bottom: 0;
+        right: 45px;
+      }
+    }
+
     .bottom-img {
       width: 639px;
       height: 72px;
-      margin-top: 107px;
+      margin-top: 95px;
       object-fit: contain;
     }
   }
+}
+
+footer {
+  background: #ffffff;
 }
