--- a/layouts/case/list.html
+++ b/layouts/case/list.html
@@ -18,7 +18,7 @@
                 <img src="{{ .icon | absURL }}" alt="">
                 <p>{{ .content }}</p>
                 <div>
-                    <a href="">{{ $tip }}</a>
+                    <a href="{{ .link }}">{{ $tip }}</a>
                 </div>
             </li>
         {{ end }}
