--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,7 +2,7 @@
 {{ $data := index .Site.Data .Site.Language.Lang }}
 <section class='section-1'>
   {{ with .Params.section1 }}
-  <img class='img1' src="images/home/bg.png" alt="">
+  <img class='img1' src="images/home/bg.jpg" alt="">
   <img class='img2' src="/images/home/12-3.png" alt="">
   <img class='img3' src="/images/home/2.svg" alt="">
   <div>
