--- a/assets/scss/common.scss
+++ b/assets/scss/common.scss
@@ -4,7 +4,11 @@
 @import 'footer';
 
 body {
-  font-family: $font-family-id;
+  font-family: $font-family-2;
+}
+
+h1, h2, h3 ,h4, h5, h6 {
+  font-family: $font-family-1;
 }
 
 html {
