--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -1,4 +1,5 @@
 $font-family: 'PingFang SC', 'Lantinghei SC', 'Helvetica Neue', Helvetica, Arial,
   'Microsoft YaHei', 微软雅黑, STHeitiSC-Light, simsun, 宋体,
   'WenQuanYi Zen Hei', 'WenQuanYi Micro Hei', sans-serif;
-$font-family-id: Roboto, $font-family;
+$font-family-1: Roboto, $font-family;
+$font-family-2: Proxima Nova, $font-family;
