add observability page

--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 
-<section>
-    <h2>页面不存在</h2>
+<section style="text-align: center; margin-top: 200px;">
+    <h2>404</h2>
 </section>
 {{ end }}
