--- a/assets/scss/service-mesh.scss
+++ b/assets/scss/service-mesh.scss
@@ -53,8 +53,9 @@ html {
     margin: 0 auto;
 
     h2 {
+      width: 760px;
+      margin: 0 auto 45px;
       text-align: center;
-      margin-bottom: 45px;
     }
 
     & > ul {
@@ -164,6 +165,10 @@ html {
       cursor: pointer;
       box-shadow: 0 10px 50px 0 rgba(34, 43, 62, 0.1), 0 8px 16px 0 rgba(33, 43, 61, 0.2), 0 10px 50px 0 rgba(34, 43, 62, 0.1);
       background-image: linear-gradient(to bottom, rgba(85, 188, 138, 0), rgba(85, 188, 138, 0.1) 97%), linear-gradient(to bottom, #55bc8a, #55bc8a);
+      
+      &:hover {
+        box-shadow: none;
+      }
     }
   }
 
