add mailchimp subscrube

--- a/assets/scss/footer.scss
+++ b/assets/scss/footer.scss
@@ -61,6 +61,10 @@
             }
           }
         }
+        #message {
+          color: red;
+          margin-left: 16px;
+        }
       }
       .right-div {
         width: 720px;
