--- a/layouts/partner/list.html
+++ b/layouts/partner/list.html
@@ -56,7 +56,7 @@
                     <h3>{{ .title }}</h3>
                     <p>{{ .content }}</p>
                     <div>
-                        <a href="">{{ $tip }}</a>
+                        <a href="{{ .link }}" target="_blank">{{ $tip }}</a>
                     </div>
                 </li>
             {{ end }}
