--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -91,7 +91,6 @@
 
     li {
       padding: 0 20px;
-      height: 32px;
       line-height: 32px;
       font-size: 12px;
       color: #36435c;
@@ -191,7 +190,8 @@
       }
 
       .dropdown-menu {
-        top: 60px
+        width: 300px;
+        top: 60px;
       }
 
       ol {
