--- a/layouts/contribution/list.html
+++ b/layouts/contribution/list.html
@@ -24,7 +24,7 @@
                 <ul>
                     {{ range .children }}
                     <li>
-                        <a href="{{ .link }}">{{ .content }}</a>
+                        <a href="{{ .link }}" target="_blank">{{ .content }}</a>
                     </li>
                     {{ end }}
                 </ul>
@@ -122,7 +122,7 @@
             <h3>{{ .title }}</h3>
             <p>{{ .content }}</p>
             <div>
-                <a href="">{{ .linkContent }}</a>
+                <a href="{{ .link }}" target="_blank">{{ .linkContent }}</a>
             </div>
         </div>
         {{ end }}
