--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -26,7 +26,7 @@
                             <li>
                                 <div class="h3">{{ .title }}</div>
                                 {{ range .list }}
-                                <a href="{{ .link }}">{{ .content }}</a>
+                                <a href="{{ .link }}" target="_blank">{{ .content }}</a>
                                 {{ end }}
                             </li>
                         {{ end }}
@@ -36,11 +36,11 @@
             </div>
             <div class="down-main">
                 <div class='img-div'>
-                    <img src="/images/footer/facebook.svg" alt="">
-                    <img src="/images/footer/youtube.svg" alt="">
-                    <img src="/images/footer/slack.svg" alt="">
-                    <img src="/images/footer/twitter.svg" alt="">
-                    <img src="/images/footer/github.svg" alt="">
+                    <!-- <a class='facebook-a' href="" target="_blank"></a> -->
+                    <a class='youtube-a' href="{{ .Site.Params.youtubeLink }}" target="_blank"></a>
+                    <a class='slack-a' href="{{ .Site.Params.slackLink }}" target="_blank"></a>
+                    <a class='twitter-a' href="{{ .Site.Params.twitterLink }}" target="_blank"></a>
+                    <a class='github-a' href="{{ .Site.Params.githubLink }}" target="_blank"></a>
                 </div>
                 <p class='p1'>{{ i18n "introduction2" }}</p>
             </div>
