--- a/assets/scss/common.scss
+++ b/assets/scss/common.scss
@@ -15,14 +15,6 @@ html {
   background-color: #f5f8f9;
 }
 
-button {
-  border: none;
-
-  &:hover {
-    box-shadow: none;
-  }
-}
-
 .common-layout {
   width: 1160px;
   margin: 0 auto;
@@ -41,7 +33,7 @@ button {
   font-size: 32px;
   font-weight: bold;
   line-height: 1.63;
-  color: #3d3e49;
+  color: #171c34;
 }
 
 .title-white-h2 {
@@ -54,10 +46,16 @@ button {
 
 .title-p {
   font-size: 16px;
+  line-height: 2;
+  text-align: center;
+  color: #919aa3;
+}
+
+.common-center-p {
+  font-size: 16px;
   line-height: 1.5;
-  letter-spacing: -0.04px;
-  color: #ffffff;
-  text-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
+  text-align: center;
+  color: #8f94a1;
 }
 
 .common-btn {
@@ -68,11 +66,19 @@ button {
   box-shadow: 0 10px 50px 0 rgba(34,43,62,.1),0 8px 16px 0 rgba(33,43,61,.2);
 
   &:hover {
-    box-shadow: none;
+    box-shadow: none!important;
   }
 }
 
-.common-a-green {
+.inner-a {
+  color: #00a971;
+
+  &:hover {
+    color: #008a5c;
+  }
+}
+
+.common-green-a {
   height: 24px;
   font-weight: 600;
   line-height: 24px;
@@ -83,7 +89,7 @@ button {
   }
 }
 
-.common-a-black {
+.common-black-a {
   height: 24px;
   font-weight: 600;
   line-height: 24px;
